# capeofhelius

./: .gitignore  .gitmodules  README.md  config.doxy
logs/: 20150112  20150113  20150123  20150125  20150507  20150531  20150618  20150620  20160118  20160123  20160213  20160802  awesome_ideas  events_rant  physics_rant
scripts/: package.json  xmlToPlist-kenney.js  xmlToPlist.js
sprite_sheets/: naamloos.tmx  squares.psd
src/: CMakeLists.txt
src/Classes/: .clang_complete  AppDelegate.cpp  AppDelegate.h  Background.cpp  Background.h  BasicScene.cpp  BasicScene.h  CCLabelBMFontAnimated.cpp  GameDirector.cpp  GameDirector.h  GameHub.cpp  GameHub.h  GameMap.cpp  GameMap.h  HelloWorldScene.cpp  HelloWorldScene.h  IKeyListener.h  Platform.cpp  Player.cpp  Player.h  TitleScreen.cpp  TitleScreen.h
src/Classes/animations/: Cloud.cpp  Cloud.h  Flag.cpp  Flag.h  Torch.cpp  Torch.h
src/Classes/base/: BasicScene.cpp  BasicScene.h  ChapterManager.cpp  ChapterManager.h  Game.cpp  Game.h  GameCamera.cpp  GameCamera.h  GameHub.cpp  GameHub.h  GameMap.cpp  GameMap.h
src/Classes/chapters/: Chapter0.cpp  Chapter0.h  Chapter1.cpp  Chapter1.h  Chapter2.cpp  Chapter2.h  ChapterPre1.cpp  ChapterPre1.h
src/Classes/dialog/: DialogAction.cpp  DialogAction.h  Dialogs.h
src/Classes/dynamic-scene/: Cloud.cpp  Flag.cpp  Flag.h  Platform.cpp  Platform.h  Torch.h
src/Classes/enemies/: AirEnemy.cpp  AirEnemy.h  Enemy.cpp  Enemy.h  GroundEnemy.cpp  GroundEnemy.h
src/Classes/physics/: PhysicComponent.cpp  PhysicComponent.h  PhysicEngine.cpp  PhysicEngine.h  PlayerPhysic.h
src/Classes/player/: Player.cpp  Player.h
src/Classes/utils/: Background.cpp  Background.h  CCLabelBMFontAnimated.cpp  CCLabelBMFontAnimated.h  TitleScreen.cpp  TitleScreen.h
src/Resources/: chapter1.tmx  chapter2.tmx  chapter3.tmx  hud.plist  item_spritesheet.plist  items.plist  player.plist  tilemap.tmx  tiles.psd  ui.plist
story/: backstory  chapter_1  chapter_2  chapter_2.txt  chapter_3  chapter_3.txt  chapter_4  chapter_5  the_story_rant
